Expose les vocabulaires controles de metadonnees
